--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -1,1 +1,19 @@
-{"dependencies":{}}
+{
+  "dependencies": {
+    "coc-html": ">=1.8.0",
+    "coc-json": ">=1.9.2",
+    "coc-tsserver": ">=2.1.4",
+    "coc-markdownlint": ">=1.33.0",
+    "coc-css": ">=2.1.0",
+    "coc-simple-react-snippets": ">=1.3.0",
+    "coc-snippets": ">=3.1.10",
+    "coc-react-refactor": ">=0.5.0",
+    "coc-git": ">=2.7.0",
+    "coc-eslint": ">=1.6.0",
+    "coc-html-css-support": ">=0.5.2",
+    "coc-prettier": ">=9.3.2",
+    "coc-sh": ">=1.2.2",
+    "coc-tslint-plugin": ">=1.2.0",
+    "coc-emmet": ">=1.1.6"
+  }
+}
