--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -53,5 +53,5 @@ volume master {
 
 tztime local {
 		format = "<span background='#8be9fd'>  </span><span background='#e5e9f0'> %time </span>"
-		format_time = "%a %-d %b %Y %H:%M"
+		format_time = "%a %-d %B %Y %H:%M"
 }
